Sun Oct  5 07:02:00 2003  Tim Janik  <timj@gtk.org>

	* sfidl-module.cc: changed generated code to contain a virtual
	property_changed() function per inheritance level.
	special cased Trigger() properties, we reset their value to false
	after update_modules().

Fri Oct  3 13:52:57 2003  Tim Janik  <timj@gtk.org>

	* sfistore.[hc]: added sfi_rstore_new_open().

Sun Sep 21 04:23:18 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* bse-plugin-generator.cc: Renamed pdef to idl.
	
	* sfidl-parser.cc: Fixed #include handling (typo).

Sun Sep 21 02:29:42 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* bse-plugin-generator.cc: Duplicated include related options
	here.

	* sfidl-options.* sfidl.cc: New options: --print-include-path,
	--version, --nostdinc. Use SFIDL_PATH_STDINC from topconfig.h.

	* sfidl-parser.cc: Include file relative includes are now only
	handled for #include "foo.idl". #include <foo.idl> uses the include
	path only.

Sat Sep 20 22:16:40 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-generator.cc sfidl-module.cc: Use sequentialValue where
	appropriate.

	* sfidl-parser.*: Compute two values for each ChoiceValue: one
	containing the assigned value for the server side C/C++ language
	binding and one containing a sequential number for the client side
	C/C++ language binding.

Mon Sep  8 00:31:10 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* gbsearcharray.h: inserted casts for C++.

Sun Sep  7 17:36:43 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-generator.* sfidl-module.cc sfidl-parser.*: reintroduce const
	for datastructures containing maps - to be able to access their
	contents, added a new template class called Map<Key,Value> with a
	const get(Key) function.

Thu Sep  4 14:58:14 2003  Tim Janik  <timj@gtk.org>

	* sfidl-module.cc: introduce static data for the generated classes.
	added set_property_changed() method to Base class to allow hooking
	into property setting.
